--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <div class="p-8">
                             <h2 class="text-2xl font-bold text-slate-800 mb-2">LeetCode Interview Prep</h2>
                             <p class="text-slate-600 mb-6">Master the "Hot 100" LeetCode questions with strategies, classified problems, and detailed walkthroughs for core patterns.</p>
-                            <a href="content/leetcode_tutor_123.html" class="inline-block bg-slate-800 text-white font-semibold py-3 px-6 rounded-lg hover:bg-slate-700 transition-colors duration-300">
+                            <a href="content/coding.html" class="inline-block bg-slate-800 text-white font-semibold py-3 px-6 rounded-lg hover:bg-slate-700 transition-colors duration-300">
                                 Start Learning &rarr;
                             </a>
                         </div>
@@ -41,7 +41,7 @@
                         <div class="p-8">
                             <h2 class="text-2xl font-bold text-slate-800 mb-2">Statistical Genomics Tutor</h2>
                             <p class="text-slate-600 mb-6">An introduction to the statistical principles behind genomic data analysis, including GWAS, RNA-Seq, and practical case studies.</p>
-                            <a href="content/stat_gen_tutor_456.html" class="inline-block bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
+                            <a href="content/stats_genomic.html" class="inline-block bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-blue-500 transition-colors duration-300">
                                 Start Learning &rarr;
                             </a>
                         </div>
