--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
                         </div>
                     </div>
 
-                    <!-- Coming Soon Card -->
-                    <div class="bg-slate-100 border-2 border-dashed border-slate-300 rounded-lg flex items-center justify-center">
-                        <div class="text-center p-8">
-                            <h2 class="text-2xl font-bold text-slate-500">More Tutorials Coming Soon!</h2>
-                            <p class="text-slate-400 mt-2">Check back later for new topics.</p>
+                    <!-- Mixture of Experts LLMs Tutorial Card -->
+                    <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
+                        <div class="p-8">
+                            <h2 class="text-2xl font-bold text-slate-800 mb-2">Mixture of Experts LLMs</h2>
+                            <p class="text-slate-600 mb-6">A deep dive into the sparse architecture powering efficient models, including theory, case studies of Mixtral, Grok-1, and Qwen.</p>
+                            <a href="content/moe_llm_tutor_101.html" class="inline-block bg-purple-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-purple-500 transition-colors duration-300">
+                                Start Learning &rarr;
+                            </a>
                         </div>
                     </div>
 
