--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="p-8">
                             <h2 class="text-2xl font-bold text-slate-800 mb-2">Mixture of Experts LLMs</h2>
                             <p class="text-slate-600 mb-6">A deep dive into the sparse architecture powering efficient models, including theory, case studies of Mixtral, Grok-1, and Qwen.</p>
-                            <a href="content/moe_llm_tutor_101.html" class="inline-block bg-purple-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-purple-500 transition-colors duration-300">
+                            <a href="content/llm_moe.html" class="inline-block bg-purple-600 text-white font-semibold py-3 px-6 rounded-lg hover:bg-purple-500 transition-colors duration-300">
                                 Start Learning &rarr;
                             </a>
                         </div>
